Added single_page competition part
